Nan | Config Ionic services (Auth Deploy Push Package), which might be useful later on

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "CoinMessages",
-  "app_id": "",
+  "app_id": "4419681b",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
