--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "cordova-plugin-whitelist": "^1.3.2",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
+        "ionic3-jpush": "^1.1.0",
         "ionicons": "3.0.0",
         "jpush-phonegap-plugin": "^3.2.3",
         "rxjs": "5.4.0",
