--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/background-mode": "^4.1.0",
         "@ionic-native/camera": "3.12.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/google-maps": "3.12.1",
@@ -32,6 +33,7 @@
         "@ngx-translate/http-loader": "0.0.3",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-background-mode": "^0.7.2",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
@@ -69,7 +71,8 @@
             "ionic-plugin-keyboard": {},
             "jpush-phonegap-plugin": {
                 "APP_KEY": "f3422ae6d945cdc664665a2d"
-            }
+            },
+            "cordova-plugin-background-mode": {}
         },
         "platforms": [
             "android",
