--- a/package.json
+++ b/package.json
@@ -1,82 +1,82 @@
 {
-  "name": "CoinMessages",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/camera": "3.12.1",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/google-maps": "3.12.1",
-    "@ionic-native/http": "^4.1.0",
-    "@ionic-native/keyboard": "^4.1.0",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/cloud-angular": "^0.12.0",
-    "@ionic/storage": "2.0.1",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3",
-    "cordova-android": "^6.2.3",
-    "cordova-ios": "^4.4.0",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.7",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-file": "^4.3.3",
-    "cordova-plugin-http": "^1.2.0",
-    "cordova-plugin-jcore": "^1.1.6",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "ionic-angular": "3.6.0",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionic3-jpush": "^1.1.0",
-    "ionicons": "3.0.0",
-    "jpush-phonegap-plugin": "^3.2.3",
-    "rxjs": "5.4.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "2.1.3",
-    "@ionic/cli-plugin-cordova": "1.6.2",
-    "@ionic/cli-plugin-ionic-angular": "1.4.1",
-    "ionic": "3.8.1",
-    "typescript": "2.3.4"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-http": {},
-      "cordova-plugin-console": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "jpush-phonegap-plugin": {
-        "APP_KEY": "f3422ae6d945cdc664665a2d"
-      }
+    "name": "CoinMessages",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-
-    "platforms": [
-      "android",
-      "ios"
-    ]
-  }
+    "dependencies": {
+        "@angular/common": "4.1.3",
+        "@angular/compiler": "4.1.3",
+        "@angular/compiler-cli": "4.1.3",
+        "@angular/core": "4.1.3",
+        "@angular/forms": "4.1.3",
+        "@angular/http": "4.1.3",
+        "@angular/platform-browser": "4.1.3",
+        "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/background-mode": "^4.1.0",
+        "@ionic-native/camera": "3.12.1",
+        "@ionic-native/core": "3.12.1",
+        "@ionic-native/google-maps": "3.12.1",
+        "@ionic-native/http": "^4.1.0",
+        "@ionic-native/splash-screen": "3.12.1",
+        "@ionic-native/status-bar": "3.12.1",
+        "@ionic/cloud-angular": "^0.12.0",
+        "@ionic/storage": "2.0.1",
+        "@ngx-translate/core": "6.0.1",
+        "@ngx-translate/http-loader": "0.0.3",
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-background-mode": "^0.7.2",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-http": "^1.2.0",
+        "cordova-plugin-jcore": "^1.1.6",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "ionic-angular": "3.6.0",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionic3-jpush": "^1.1.0",
+        "ionicons": "3.0.0",
+        "jpush-phonegap-plugin": "^3.2.3",
+        "rxjs": "5.4.0",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.12"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "2.1.3",
+        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "ionic": "3.8.1",
+        "typescript": "2.3.4"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-http": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "jpush-phonegap-plugin": {
+                "APP_KEY": "f3422ae6d945cdc664665a2d"
+            },
+            "cordova-plugin-background-mode": {}
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
+    }
 }
-
