--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/background-mode": "^4.1.0",
         "@ionic-native/camera": "3.12.1",
-        "@ionic-native/core": "3.12.1",
+        "@ionic-native/core": "^3.12.1",
         "@ionic-native/google-maps": "3.12.1",
         "@ionic-native/http": "^4.1.0",
+        "@ionic-native/keyboard": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/cloud-angular": "^0.12.0",
